--- a/src/app/agent-service/dashbort/dashbort.component.html
+++ b/src/app/agent-service/dashbort/dashbort.component.html
@@ -25,7 +25,12 @@
             <span class="flex-1 ms-3 whitespace-nowrap">Liste assuré vie</span>
           </a>
         </li>
-
+        <li>
+          <a [routerLink]="['/agent/liste-constat']" class="flex items-center p-2 text-white rounded-lg hover:bg-teal-700 group">
+            <i class="fas fa-file-alt w-5 h-5 text-white transition duration-75 group-hover:text-white"></i>
+            <span class="flex-1 ms-3 whitespace-nowrap">Liste constat</span>
+          </a>
+        </li>
         <!-- Liste expert -->
         <li>
           <a [routerLink]="['/agent/liste-expert']" class="flex items-center p-2 text-white rounded-lg hover:bg-teal-700 group">
