--- a/src/app/expert/expert.component.html
+++ b/src/app/expert/expert.component.html
@@ -1,1 +1,87 @@
-<p>expert works!</p>
+<div class="flex h-screen font-roboto">
+    <aside id="default-sidebar" class="fixed top-20 bg-teal-600 z-40 w-60 h-screen transition-transform -translate-x-full sm:translate-x-0" aria-label="Sidebar">
+      <div class="h-full mt-4 py-4 overflow-y-auto px-10">
+        <ul class="space-y-2 font-medium">
+          <!-- Accueil -->
+          <li>
+            <a href="#" class="flex items-center p-2 rounded-lg text-white bg-teal-700 hover:bg-teal-600 group">
+              <i class="fas fa-home w-5 h-5 text-white transition duration-75 group-hover:text-white"></i>
+              <span class="flex-1 ms-3 whitespace-nowrap">Tableau de bord</span>
+            </a>
+          </li>
+    
+          <!-- Gestion des constats -->
+          <li>
+            <a href="#" class="flex items-center p-2 text-white rounded-lg hover:bg-teal-600 group">
+              <i class="fas fa-file-signature w-5 h-5 text-white transition duration-75 group-hover:text-white"></i>
+              <span class="flex-1 ms-3 whitespace-nowrap">Constats à traiter</span>
+            </a>
+          </li>
+    
+          <!-- Expertise en cours -->
+         
+    
+          <!-- Historique -->
+          <li>
+            <a href="#" class="flex items-center p-2 text-white rounded-lg hover:bg-teal-600 group">
+              <i class="fas fa-history w-5 h-5 text-white transition duration-75 group-hover:text-white"></i>
+              <span class="flex-1 ms-3 whitespace-nowrap">Historique</span>
+            </a>
+          </li>
+    
+          <!-- Documents -->
+          <li>
+            <a href="#" class="flex items-center p-2 text-white rounded-lg hover:bg-teal-600 group">
+              <i class="fas fa-folder-open w-5 h-5 text-white transition duration-75 group-hover:text-white"></i>
+              <span class="flex-1 ms-3 whitespace-nowrap">Documents</span>
+            </a>
+          </li>
+    
+          <!-- Assistance -->
+          
+        </ul>
+    
+        <!-- Ligne de séparation -->
+        <hr class="my-4 border-teal-500">
+        <div class="flex flex-col items-center justify-center space-y-2">
+          <p class="text-white text-sm text-center">Merci de votre confiance !</p>
+          <p class="text-white text-xs text-center"> © 2025 Flesk Cover </p>
+        </div>
+      </div>
+    </aside>
+    
+    <nav class="bg-gray-50 text-gray-900 fixed top-0 left-0 w-full z-50 p-2 shadow-lg">
+      <div class="container mx-auto flex justify-between items-center px-4">
+        <!-- Logo et message de bienvenue -->
+        <div class="flex items-center space-x-4 ml-4 sm:ml-6 md:ml-8 lg:ml-10 xl:ml-5">
+          <a routerLink="/" class="flex items-center text-2xl font-semibold text-teal-800">
+            <i class="fas fa-umbrella w-8 h-8 mr-2"></i>
+            Flesk Cover
+          </a>
+          <h2 class="text-lg font-medium text-gray-700">Expertise automobile</h2>
+        </div>
+    
+        <!-- Profil et options -->
+        <div class="flex items-center space-x-4">
+          <!-- Icône Notification -->
+          <button class="h-10 w-10 flex items-center justify-center rounded-full border-2 border-teal-800 hover:bg-teal-100 focus:outline-none">
+            <svg class="h-5 w-5 text-teal-800" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+              <path d="M10 2a6 6 0 0 0-6 6v2c0 1.06-.57 2.02-1.5 2.58-.23.14-.5.42-.5.92v1c0 .55.45 1 1 1h15a1 1 0 0 0 1-1v-1c0-.5-.27-.78-.5-.92C16.57 12.02 16 11.06 16 10V8a6 6 0 0 0-6-6zM8 17a2 2 0 1 0 4 0H8z" />
+            </svg>
+          </button>
+          
+          <!-- Photo de profil et informations -->
+          <div class="flex items-center space-x-3 bg-gray-100 p-2 rounded-lg">
+            <div class="flex flex-col">
+              <span class="text-teal-800 font-medium">Expert</span>
+  
+              <div class="flex space-x-3 text-sm text-gray-600 mt-1">
+                <a [routerLink]="['/dashboard-expert/account']" class="hover:text-teal-600">Mon compte</a>
+                <a href="#" class="hover:text-red-600">Déconnexion</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+</div>
