--- a/src/app/assure/devi/devi.component.html
+++ b/src/app/assure/devi/devi.component.html
@@ -59,7 +59,7 @@
               <label class="block text-lg font-semibold text-gray-700">Année de 1ère mise en circulation <span class="text-red-500">*</span></label>
               <input type="number" formControlName="DPMC" class="border p-3 rounded-lg w-full focus:outline-none focus:ring-2 focus:ring-blue-500">
               <div *ngIf="formulaireEtape1.get('DPMC')?.invalid && formulaireEtape1.get('DPMC')?.touched" class="text-red-500 text-sm">
-                Ce champ est obligatoire.
+                Année invalide.
               </div>
             </div>
             <div class="space-y-2">
